--- a/CSS/Animation Cloud/style.css
+++ b/CSS/Animation Cloud/style.css
@@ -2,22 +2,102 @@
     padding: 0;
     margin: 0;
 }
+body{
+    background-color: #87CEEB;
+}
 .box{
     width: 100%;
-    height: 250px;
-    border: 2px solid black;
+    height: 500px;
+    /* border: 2px solid black; */
     position: relative;
     margin-top: 50px;
     overflow: hidden;
 
 }
 .sun{
-    width: 120px;
-    height: 120px;
-    background-color:rgba(255, 165, 0, 1);
+    width: 300px;
+    height: 300px;
+    background-color:rgba(255, 165, 0, 0.6);
     border-radius: 50% ;
     position: absolute;
     top: 50px;
     left: -15px;
+    animation: sun 5s ease-in-out 5;
 
+}
+.cloud-1{
+    width: 300px;
+    height: 250px;
+    position: absolute;
+    top: 20px;
+    left: -10px;
+    opacity: 0.8;
+    animation: cloud1 5s linear 5;
+}
+.cloud-2{
+    width: 300px;
+    height: 250px;
+    position: absolute;
+    top: 30px;
+    left: 500px;
+    opacity: 0.8;
+    animation: cloud2 2.5s ease-in 5;
+    animation-delay: 2.5s;
+}
+.cloud-3{
+    width: 300px;
+    height: 250px;
+    position: absolute;
+    top: 50px;
+    right: -10px;
+    opacity: 0.8;
+   animation: cloud3 5s ease-out 5;
+ 
+}
+@keyframes cloud1 {
+    from{
+        top: 20px;
+        left: -10px;
+    }
+    to{
+        top: 20px;
+        left: 110%;
+    }
+    
+}
+@keyframes cloud2 {
+    from{
+        top: 30px;
+        left: 500px;
+    }
+    to{
+        top: 30px;
+       left: 110%;
+    }
+    
+}
+
+@keyframes cloud3 {
+    from{
+        top: 50px;
+        right: -10px;
+    }
+    to{
+        top: 30px;
+        right: 110%;
+    }
+    
+}
+
+@keyframes sun {
+    from{
+        top: 50px;
+        left: -15px;
+        background-color:rgba(255, 165, 0, 0.6);
+    }
+    to{
+        top: 15px;
+        left: 110%;
+        background-color:rgba(255, 165, 0, 1);
+    }
 }
